--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name">Name</string>
+    <string name="nofrizal">Nofrizal</string>
+    <string name="deskripsi_diri">Nama saya Nofrizal, saya lahir di Bandung 26 November 1999. Orang tua saya berasal dari padang, orang tua saya merantau sejak mereka remaja. Saya memiliki adik bernama Silvia. Hobby saya adalah bermain game, serta beberapa olahraga seperti basket dan badminton, saya pernah bercita cita menjadi seorang atlit, tetapi ada banyal yang merubah pikiran saya untuk menjadi seorang atlit hingga saat SMA saya memutuskan untuk bercita cita untuk membuat game/ developer game.</string>
+    <string name="title">Title</string>
+    <string name="singer">Singer</string>
 </resources>
