Selesai Semua, tinggal RecyclerView YoutubePlayer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="deskripsi_diri">Nama saya Nofrizal, saya lahir di Bandung 26 November 1999. Orang tua saya berasal dari padang, orang tua saya merantau sejak mereka remaja. Saya memiliki adik bernama Silvia. Hobby saya adalah bermain game, serta beberapa olahraga seperti basket dan badminton, saya pernah bercita cita menjadi seorang atlit, tetapi ada banyal yang merubah pikiran saya untuk menjadi seorang atlit hingga saat SMA saya memutuskan untuk bercita cita untuk membuat game/ developer game.</string>
     <string name="title">Title</string>
     <string name="singer">Singer</string>
+    <string name="find_me">Find Me</string>
+    <string name="about_the_app">About The App</string>
+    <string name="ludens">Bring Me The Horizon - Ludens: Live in Tokyo</string>
+    <string name="MHA">My Hero Academia: HEROES RISING</string>
+    <string name="spiderman">SPIDER-MAN 3: Home Run</string>
 </resources>
