--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="next">Next</string>
     <string name="tampan_dan_berani">Tampan Dan Berani</string>
     <string name="home">Home</string>
-    <string name="daily_activity">Daily Activity</string>
+    <string name="txtdaily">Daily Activity</string>
     <string name="gallery">Gallery</string>
     <string name="music">Music</string>
     <string name="profile">Profile</string>
@@ -25,4 +25,6 @@
     <string name="ludens">Bring Me The Horizon - Ludens: Live in Tokyo</string>
     <string name="MHA">My Hero Academia: HEROES RISING</string>
     <string name="spiderman">SPIDER-MAN 3: Home Run</string>
+    <string name="friend_list">Friend List</string>
+    <string name="daily_activity">Daily Activity</string>
 </resources>
